fixed Defect - Subskill Invisible in Read-only Mode

--- a/hrportal/client/src/components/PeriodicalDashboard.module.css
+++ b/hrportal/client/src/components/PeriodicalDashboard.module.css
@@ -9,6 +9,7 @@ Modification Log:
 Date        |   Author                  |   Sprint   |  Phase  |  Description 
 -------------------------------------------------------------------------------------------------------
  30/08/2024 |   Vishal                  |     4      |   2     | CSS Coloring and Field Alignment
+ 03/09/2024 |   Harshini C              |     5      |   2     | UI fixes
 -------------------------------------------------------------------------------------------------------
 // */
 
@@ -31,7 +32,7 @@ Date        |   Author                  |   Sprint   |  Phase  |  Description
   
   .rastanty_Cortez {
     font-family: Rastanty Cortez;
-    font-size: 70px;
+    font-size: 60px;
     color:  #ffffff;
     margin-bottom: 45px;
   }
@@ -65,30 +66,30 @@ Date        |   Author                  |   Sprint   |  Phase  |  Description
   .mainskill {
     padding: 10px;
   }
-  
+ 
   .skillDropdown {
+    display: flex;
+    flex-direction: row;
+    padding-right: 40px;
+    justify-content: space-between;
+    width: 52%;
     padding: 10px;
-    font-size: 16px;
-    background-color: #ffffff; /* Dark background for contrast */
-    color: rgb(0, 0, 0); /* Ensure text is visible */
-    border: 1px solid #ddd;
-    border-radius: 4px;
-}
-  
+  }
+
   .skillDropdown option {
     background-color: #ffffff; /* Match dropdown background */
     color: rgb(0, 0, 0); /* Ensure option text is visible */
-}
+  }
 
-.date {
-  margin-left: 8px;
-  margin-right: 22px;
-}
+  .date {
+    margin-left: 8px;
+    margin-right: 22px;
+  }
   
   .dateFields {
     display: flex;
     flex-direction: row;
-    width: 100%;
+    width: 120%;
     gap: 20px;
     color: white;
   }
@@ -110,11 +111,11 @@ Date        |   Author                  |   Sprint   |  Phase  |  Description
 
   .generateReportBtn {
     padding: 10px 10px;
-    background-color: #d4d4d4;
+    background-color: #fcfcfc;
     color: #000;
-    width: 22%;
+    width: 20%;
     /* margin: 10px 32%; */
-    margin-left: 135px;
+    margin-left: 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -150,4 +151,8 @@ Date        |   Author                  |   Sprint   |  Phase  |  Description
   .error {
     color: red;
     margin-top: 10px;
+}
+
+.asterisk {
+  color: red;
 }
